--- a/startTyping.html
+++ b/startTyping.html
@@ -6,10 +6,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="styl.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script>
     <title>Vanilla-Typing</title>
 </head>
-<body>
-    
+<body class="bg-gray-900">
+    <canvas class="background"></canvas>
+    <header class="bg-fuchsia-400">
+        <nav>
+
+        </nav>
+    </header>
 </body>
 </html>
