Création du navbar

--- a/startTyping.html
+++ b/startTyping.html
@@ -10,8 +10,8 @@
 </head>
 <body class="bg-gray-900">
     <canvas class="background"></canvas>
-    <header class="bg-fuchsia-400">
-        <nav>
+    <header class="bg-fuchsia-400 border-none">
+        <nav class="container mx-16 flex justify-between py-6 text-amber-50 sm:flex-row w-auto gap-7">
 
         </nav>
     </header>
