--- a/startTyping.html
+++ b/startTyping.html
@@ -12,7 +12,9 @@
     <canvas class="background"></canvas>
     <header class="bg-fuchsia-400 border-none">
         <nav class="container mx-16 flex justify-between py-6 text-amber-50 sm:flex-row w-auto gap-7">
-
+            <div class="text-center sm:text-left">
+                <h1 class="font-bold">Vanilla-Typing</h1>
+            </div>
         </nav>
     </header>
 </body>
