--- a/startTyping.html
+++ b/startTyping.html
@@ -11,11 +11,22 @@
 <body class="bg-gray-900">
     <canvas class="background"></canvas>
     <header class="bg-fuchsia-400 border-none">
-        <nav class="container mx-16 flex justify-between py-6 text-amber-50 sm:flex-row w-auto gap-7">
+        <nav class="container mx-16 lg:mx-40 flex justify-between py-6 text-amber-50 sm:flex-row w-auto gap-7">
             <div class="text-center sm:text-left">
                 <h1 class="font-bold">Vanilla-Typing</h1>
             </div>
-            
+
+            <div class="hidden sm:flex flex-row justify-between gap-2 items-center">
+                <div class="flex  space-x-6"> <!-- Change flex-col to flex-row -->
+                    <select id="mode" class="px-4 py-2 rounded bg-gray-700 text-white">
+                        <option value="easy">Easy 🤗</option>
+                        <option value="medium">Medium 😐</option>
+                        <option value="hard">Hard 🥵</option>
+                    </select>
+           </div>
+
+           
+
         </nav>
     </header>
 </body>
