Ajout du profile

--- a/startTyping.html
+++ b/startTyping.html
@@ -25,7 +25,22 @@
                     </select>
            </div>
 
-           
+           <div class="w-auto text-center text-2xl pr-4 relative group">
+            <i class="fa-solid fa-circle-user" id="profile-icon"></i>
+            <div class="absolute top-12 left-1/2 -translate-x-1/2 w-96 bg-white text-black p-4 rounded-xl shadow-lg opacity-0 transition duration-300 z-50 text-sm">
+                <div class="flex flex-col items-center space-y-2">
+                    <div class="w-40 h-40 rounded-full overflow-hidden border-2 border-gray-300">
+                        <img src="picture/téléchargement.jpeg" alt="Profile Picture" class="w-full h-full object-cover">
+                    </div>
+                    <div class="text-center" id="profile-box">
+                        <p><strong>Username:</strong> gamer42</p>
+                        <p><strong>Email:</strong> gamer42@example.com</p>
+                        <p><strong>Level:</strong> 7</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         </nav>
     </header>
