Création du menu humberger

--- a/startTyping.html
+++ b/startTyping.html
@@ -69,10 +69,13 @@
                 
                 </div>
               </a>
-              
-
 </div>
 </div>
+<div class="sm:hidden">
+    <input type="checkbox" id="hamburger-checkbox" class="hidden">
+    <label for="hamburger-checkbox" class="text-2xl text-amber-50 cursor-pointer">
+        <i class="fa-solid fa-bars"></i>
+    </label>
 
 
         </nav>
