--- a/startTyping.html
+++ b/startTyping.html
@@ -76,6 +76,19 @@
     <label for="hamburger-checkbox" class="text-2xl text-amber-50 cursor-pointer">
         <i class="fa-solid fa-bars"></i>
     </label>
+    <div id="mobile-menu" class="fixed inset-0 bg-black bg-opacity-90 z-10 transform translate-x-full transition-all duration-300">
+        <div class="flex justify-end p-4 my-2">
+            <label for="hamburger-checkbox" class="text-2xl text-amber-50 cursor-pointer">
+                <i class="fa-solid fa-times"></i>
+            </label>
+        </div>
+        <div class="flex space-x-6 my-2"> <!-- Change flex-col to flex-row -->
+          <select id="mode" class="px-4 py-2 rounded bg-gray-700 text-white m-auto">
+              <option value="easy">Easy 🤗</option>
+              <option value="medium">Medium 😐</option>
+              <option value="hard">Hard 🥵</option>
+          </select>
+        </div>
 
 
         </nav>
