--- a/startTyping.html
+++ b/startTyping.html
@@ -90,6 +90,22 @@
           </select>
         </div>
 
+        <div class="flex flex-col items-center text-amber-50 md:hidden my-2">
+            <button id="toggle-user-info" class="text-xl focus:outline-none">
+              <i class="fa-solid fa-circle-user"></i>
+            </button>
+          <div id="user-info-mobile" class="mt-3 hidden bg-white text-black rounded-xl p-4 w-64 shadow-lg text-sm z-50">
+              <div class="flex items-center gap-3 mb-3">
+                <img src="picture/téléchargement.jpeg" alt="User photo" class="rounded-full w-12 h-12 object-cover">
+                <div>
+                  <p class="font-semibold">Username</p>
+                  <p class="text-xs text-gray-600">user@email.com</p>
+                </div>
+              </div>
+              <p class="text-sm font-medium text-indigo-700">Level: 7</p>
+            </div>
+          </div>
+
 
         </nav>
     </header>
