Ajout classement pour mobile

--- a/startTyping.html
+++ b/startTyping.html
@@ -105,7 +105,37 @@
               <p class="text-sm font-medium text-indigo-700">Level: 7</p>
             </div>
           </div>
-
+          <div class="w-auto text-center text-2xl">
+            <div class="relative text-amber-50 text-2xl mb-4">
+                <button id="mobile-ranking-btn"><i class="fa-solid fa-ranking-star"></i></button>
+                <div id="mobile-leaderboard" class="hidden fixed inset-0 bg-white text-black p-4 z-50 text-sm overflow-y-auto">
+                    <div class="flex justify-end">
+                        <button id="close-leaderboard" class="text-2xl text-gray-600">
+                            <i class="fa-solid fa-times"></i>
+                        </button>
+                    </div>
+                    <h2 class="font-bold text-center mb-2">Top Players</h2>
+                    <!-- Modifications sur le ul -->
+                    <ul class="flex-grow h-full overflow-y-auto space-y-1">
+                        <li class="flex justify-between"><p><i class="fa-solid fa-1 text-yellow-500 mr-2"></i>ShadowX</p><p>120 WPM</p></li>
+                        <li class="flex justify-between"><p><i class="fa-solid fa-2 text-yellow-500 mr-2"></i>Blaze</p><p>115 WPM</p></li>
+                        <li class="flex justify-between"><p><i class="fa-solid fa-3 text-yellow-500 mr-2"></i>NovaBlade</p><p>110 WPM</p></li>
+                        <li class="flex justify-between"><p><i class="fa-solid fa-4 mr-2"></i>GhostRider</p><p>105 WPM</p></li>
+                        <li class="flex justify-between"><p><i class="fa-solid fa-5  mr-2"></i>NightWolf</p><p>102 WPM</p></li>
+                        <li class="flex justify-between"><p><i class="fa-solid fa-6  mr-2"></i>CyberStorm</p><p>100 WPM</p></li>
+                        <li class="flex justify-between"><p><i class="fa-solid fa-7 mr-2"></i>Venom</p><p>98 WPM</p></li>
+                        <li class="flex justify-between"><p><i class="fa-solid fa-8 mr-2"></i>DarkNova</p><p>95 WPM</p></li>
+                        <li class="flex justify-between"><p><i class="fa-solid fa-9 mr-2"></i>SniperFox</p><p>93 WPM</p></li>
+                        <li class="flex justify-between"><p><i class="fa-solid fa-1"></i><i class="fa-solid fa-0  mr-2"></i>FuryKiller</p><p>90 WPM</p></li>
+                        <li class="flex justify-between"><p><i class="fa-solid fa-1"></i><i class="fa-solid fa-1 mr-2"></i>PixelZ</p><p>88 WPM</p></li>
+                        <li class="flex justify-between"><p><i class="fa-solid fa-1"></i><i class="fa-solid fa-2 mr-2"></i>RageQuit</p><p>85 WPM</p></li>
+                        <li class="flex justify-between"><p><i class="fa-solid fa-1"></i><i class="fa-solid fa-3  mr-2"></i>ZeroCool</p><p>83 WPM</p></li>
+                        <li class="flex justify-between"><p><i class="fa-solid fa-1"></i><i class="fa-solid fa-4  mr-2"></i>SkyHunter</p><p>80 WPM</p></li>
+                        <li class="flex justify-between"><p><i class="fa-solid fa-1"></i><i class="fa-solid fa-5 mr-2"></i>IronFist</p><p>78 WPM</p></li>
+                    </ul>
+                </div>
+            </div>
+        </div>  
 
         </nav>
     </header>
