--- a/startTyping.html
+++ b/startTyping.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Vanilla-Typing</title>
+    <title>Vanilla~Typing</title>
 </head>
 <body class="bg-gray-900">
     <canvas class="background"></canvas>
     <header class="bg-fuchsia-400 border-none">
         <nav class="container mx-16 lg:mx-40 flex justify-between py-6 text-amber-50 sm:flex-row w-auto gap-7">
             <div class="text-center sm:text-left">
-                <h1 class="font-bold">Vanilla-Typing</h1>
+                <h1 class="font-bold">Vanilla~Typing</h1>
             </div>
 
             <div class="hidden sm:flex flex-row justify-between gap-6 items-center">
