--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script>
-    <title>Vanilla-Typing</title>
+    <title>Vanilla~Typing</title>
 </head>
 <body class="bg-gray-900 text-white">
     <canvas class="background fixed top-0 left-0 w-full h-full -z-10"></canvas>
   <section class="flex items-center justify-center min-h-screen text-center">
     <main>
       <div class="space-y-8">
-        <p class="font-bold text-4xl">Welcome to Vanilla-Typing</p>
+        <p class="font-bold text-4xl">Welcome to Vanilla~Typing</p>
 
         <button
           class="group relative inline-flex items-center justify-center p-0.5 text-sm font-medium text-gray-900 rounded-lg bg-gradient-to-br from-purple-500 to-pink-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800"
