--- a/startTyping.html
+++ b/startTyping.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="hidden sm:flex flex-row justify-between gap-6 items-center">
-                <div class="flex  space-x-6"> <!-- Change flex-col to flex-row -->
+                <div class="flex  space-x-6"> 
                     <select id="mode" class="px-4 py-2 rounded bg-gray-700 text-white">
                         <option value="easy">Easy 🤗</option>
                         <option value="medium">Medium 😐</option>
@@ -53,7 +53,7 @@
                 <i class="fa-solid fa-times"></i>
             </label>
         </div>
-        <div class="flex space-x-6 my-2"> <!-- Change flex-col to flex-row -->
+        <div class="flex space-x-6 my-2"> 
           <select id="mode" class="px-4 py-2 rounded bg-gray-700 text-white m-auto">
               <option value="easy">Easy 🤗</option>
               <option value="medium">Medium 😐</option>
