Modification du nom et email user

--- a/startTyping.html
+++ b/startTyping.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="text-left" id="profile-box">
                         <p class="text-indigo-700"><strong>Username:</strong> gamer42</p>
-                        <p class="text-indigo-700"><strong>Email:</strong> gamer42@example.com</p>
+                        <p class="text-indigo-700"><strong>Email:</strong> gamer42@gmail.com</p>
                         <p class="text-indigo-700"><strong>WPM:</strong> 50 </p>
                     </div>
                 </div>
@@ -69,8 +69,8 @@
               <div class="flex items-center gap-3 mb-3">
                 <img src="assets/téléchargement.jpeg" alt="User photo" class="rounded-full w-12 h-12 object-cover">
                 <div>
-                  <p class="font-semibold text-indigo-700">Username</p>
-                  <p class="text-xs text-indigo-700">user@email.com</p>
+                  <p class="font-semibold text-indigo-700">gamer42</p>
+                  <p class="text-xs text-indigo-700">gamer42@email.com</p>
                 </div>
               </div>
               <p class="text-sm font-medium text-indigo-700">WPM: 50</p>
