--- a/startTyping.html
+++ b/startTyping.html
@@ -11,7 +11,7 @@
 </head>
 <body class="bg-gray-900">
     <canvas class="background"></canvas>
-    <header class="bg-fuchsia-400 border-none">
+    <header class="bg-gray-600 border-none">
         <nav class="container mx-20 lg:mx-40 flex justify-between py-6 text-amber-50 sm:flex-row w-auto gap-7">
             <div class="text-center sm:text-left">
                 <h1 class="font-bold">Vanilla~Typing</h1>
