ajout de la balise script

--- a/startTyping.html
+++ b/startTyping.html
@@ -102,6 +102,7 @@
           </div>
         </section>
       </main>
+<script src="script.js"></script>
 <script src="startTyping.js"></script>
 </body>
 </html>
